force-app/main/default/objects/Warning__c/Warning__c.object-meta.xml
<CustomObject>
    <label>Warning</label>
    <pluralLabel>Warnings</pluralLabel>
    <nameField>
        <label>Warning Name</label>
        <type>AutoNumber</type>
        <displayFormat>WARN-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>