force-app/main/default/objects/Warning__c/fields/Warning_Date__c.field-meta.xml
<CustomField>
    <fullName>Warning_Date__c</fullName>
    <label>Warning Date</label>
    <type>Date</type>
</CustomField>