force-app/main/default/objects/Warning__c/fields/Week_Key__c.field-meta.xml
<CustomField>
    <fullName>Week_Key__c</fullName>
    <label>Week Key</label>
    <type>Text</type>
    <length>20</length>
    <description>ISO year-week identifier, e.g. 2026-20. Used to prevent duplicate warnings for the same week.</description>
</CustomField>